<resources>
    <string name="app_name">LearningEpisode</string>
    <string name="ProjectName" translatable="false">LearningEpisode</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="usernameHash">Username #</string>
    <string name="name">Name</string>
    <string name="create_an_account">Create an Account</string>
    <string name="have_an_account">Already have an account? Login</string>
    <string name="don_t_have_an_account">Don\'t have an account? Register</string>
    <string name="logout">Logout</string>
    <string name="title">Title</string>
    <string name="welcome">"Welcome, "</string>
    <string name="noInternet">please check your Internet Connection.</string>
    <string name="no_course">Currently no course available</string>
    <string name="no_users">currently no students data in the database</string>
    <string name="no_description">No description</string>
    <string name="no_lessons">Currently No Lessons</string>
    <string name="no_data_received">No Data Received</string>
    <string name="Error_no_data_received">Error: No Data Received</string>
    <string name="enrolled">Enrolled</string>
    <string name="enroll">ENROLL</string>
    <string name="lessons_list">Lessons List</string>
    <string name="lesson_title">Lesson Title</string>
    <string name="id">ID</string>
    <string name="creation_date">Creation Date #</string>
    <string name="lesson_description">Lesson Description</string>
    <string name="download_lesson">Download Lesson</string>
    <string name="lesson_questions">Lesson Questions</string>
    <string name="created_on">Created On #</string>
    <string name="insert_new_course">Insert New Course</string>
    <string name="course_name">Course Name</string>
    <string name="image_url">Image URL</string>
    <string name="image_url_optional">Image Url (Optional)</string>
    <string name="insert">Insert</string>
    <string name="course_desc_optional">Course Desc. (optional)</string>
    <string name="lesson_desc_optional">Lesson Desc. (Optional)</string>
    <string name="download_link">Download Link</string>
    <string name="download_url_optional">Download URL (optional)</string>
    <string name="video_url">Video Url</string>
    <string name="video_url_optional">Video URL (optional)</string>
    <string name="insert_new_lesson">Insert New Lesson</string>
    <string name="questions_list">Questions List</string>
    <string name="user_list">Users List</string>
    <string name="course_list">Course List</string>
    <string name="error_no_data_received">Error: No Data Received</string>
    <string name="current_enrollments">CURRENT ENROLLMENTS</string>
    <string name="no_questions">Currently no questions for this lesson</string>
    <string name="specify_the_right_answer">please specify the right answer</string>
    <string name="my_courses">My Courses</string>
    <string name="modify_user_data">Modify User Data</string>
    <string name="student">Student</string>
    <string name="admin">Admin</string>
    <string name="edit">edit</string>
    <string name="feedbackList">Feedback List</string>
    <string name="idHash">ID #</string>
    <string name="dateHash">Created on #</string>
    <string name="typeHash">Account Type #</string>
    <string name="emailHash">Email #</string>
    <string name="username">Username</string>
    <string name="choiceOne">Choice One</string>
    <string name="choiceTwo">Choice Two</string>
    <string name="choiceThree">Choice Three</string>
    <string name="modify_the_question">Modify The Question</string>
    <string name="specify_the_answer">Please specify the question answer</string>
    <string name="insert_new_user">Insert New User</string>
    <string name="account_type">Account Type</string>
    <string name="account_type_hash">Account Type #</string>
    <string name="password_optional">Password (Optional)</string>
    <string name="total_enrolls_hash">Total Enrolls #</string>
    <string name="view_lessons">View Lessons</string>
    <string name="courses">Courses</string>
    <string name="accounts">Accounts</string>
    <string name="feedback">Feedback</string>
    <string name="profile">Profile</string>
    <string name="homepage" translatable="false">&#160; &#160;LearningEpisode &#160; &#160;</string>
    <string name="feedback_type">Feedback Type</string>
    <string name="student_comment">Comment</string>
    <string name="admin_reply">Admin Reply</string>
    <string name="feedback_by">Feedback By #</string>
    <string name="insert_new_feedback">Insert new Feedback</string>
    <string name="student_feedback">Student Feedback</string>
    <string name="add_a_comment">Add a Comment</string>
    <string name="attach_an_image_url">Attach an Image URL</string>
    <string name="attach_an_image_url_optional">Attach an Image URL (optional)</string>
    <string name="modify_feedback">Modify Feedback</string>
    <string name="course_enrolls">Course Enrolls</string>
    <string name="course_description">Course Description</string>
    <string name="choice_one">Choice One</string>
    <string name="choice_two">Choice Two</string>
    <string name="choice_three">Choice Three</string>
    <string name="question_title">Question Title</string>
    <string name="time_pattern" translatable="false">yyyy-MM-d hh:mm:ss</string>
    <string name="date" translatable="false">d MMMM yyyy</string>
    <string name="daydate" translatable="false">EEEE, d MMMM yyyy</string>
    <string name="daydatetime" translatable="false">EEEE, d MMMM yyyy, h:mm a</string>
    <string name="title_name" translatable="false">Title Name</string>
    <string name="suggestion">Suggestion</string>
    <string name="technical_issue">Technical Issue</string>
    <string name="other">Other</string>
    <string name="unspecified">unspecified</string>
    <string name="feedback_description">Feedback Description</string>
    <string name="feedback_type_hash">Feedback Type #</string>
    <string name="specify_question_title">Please specify the Question Title</string>
    <string name="specify_choice_one">Please specify the Question Choice One</string>
    <string name="specify_choice_two">Please specify the Question Choice Two</string>
    <string name="specify_choice_three">Please specify the Question Choice Three</string>
</resources>
