<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_sea">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".account.RegisterActivity">

        <ImageView
            android:id="@+id/register_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/half_horizontal_space"
            android:layout_marginTop="@dimen/vertical_space"
            app:srcCompat="@drawable/expandt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/register_appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/prime"
            android:text="@string/ProjectName"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_logo"
            app:layout_constraintVertical_bias="0" />

        <TextView
            android:id="@+id/create_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_an_account"
            android:fontFamily="@font/segoeui"
            android:textSize="24sp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.11"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_appName"
            app:layout_constraintVertical_bias="0" />

        <EditText
            android:id="@+id/r_username"
            style="@style/TextLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:background="@drawable/default_et_style"
            android:hint="@string/username"
            android:padding="10dp"
            android:textAlignment="viewStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_an_account"
            app:layout_constraintWidth_percent=".7" />

        <EditText
            android:id="@+id/r_password"
            style="@style/TextLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="5dp"
            android:background="@drawable/default_et_style"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textAlignment="viewStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/r_username"
            app:layout_constraintWidth_percent=".7" />

        <EditText
            android:id="@+id/r_email"
            style="@style/TextLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="5dp"
            android:background="@drawable/default_et_style"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textAlignment="viewStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/r_password"
            app:layout_constraintWidth_percent=".7" />

        <EditText
            android:id="@+id/r_name"
            style="@style/TextLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="5dp"
            android:background="@drawable/default_et_style"
            android:hint="@string/name"
            android:padding="10dp"
            android:textAlignment="viewStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/r_email"
            app:layout_constraintWidth_percent=".7" />

        <!-- ProgressBar is visible when the list is Loading. -->
        <ProgressBar
            android:id="@+id/spinner"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="10dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/r_register_b"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@drawable/gradient_button2"
            android:maxLines="1"
            android:text="@string/register"
            android:fontFamily="@font/segoeui"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/r_name"
            app:layout_constraintVertical_bias=".15"
            app:layout_constraintWidth_percent=".7" />

        <TextView
            android:id="@+id/r.login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/have_an_account"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/r_register_b" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
