<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/c_cv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/gradient_clouds"
        android:padding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/feedbackList_item_ID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Feedback ID #"
                android:textColor="@color/colorPrimary"
                android:gravity="center"
                android:textSize="10sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".3" />

            <me.grantland.widget.AutofitTextView
                android:id="@+id/feedbackList_item_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:gravity="center"
                android:text="@string/created_on"
                android:textColor="@color/colorPrimary"
                android:textSize="10sp"
                android:typeface="monospace"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/feedbackList_item_ID"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".7" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/feedbackList_item_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feedback_type"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/feedbackList_item_stuComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feedback_description"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.cardview.widget.CardView>